--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "test-babel": "babel pages/ --out-dir babel-test",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@babel/cli": "^7.16.0",
+    "@babel/core": "^7.16.0",
+    "babel-preset-expo": "^8.5.1",
     "next": "12.0.4",
     "react": "17.0.2",
     "react-dom": "17.0.2"
